--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,14 @@ button:focus-visible {
   line-height: 60px;
 }
 
+.app-title {
+  font-size: 45px;
+  font-weight: bold;
+  font-family: 'Air Planet', sans-serif;
+  line-height: 60px;
+  color: white; /* 👈 this is what you need! */
+}
+
 .app-container {
   display: flex;
   flex-direction: row;
